Fixed image alignment in Coupons CSS

--- a/Ressources/HTML/css/coupon-iPad.css
+++ b/Ressources/HTML/css/coupon-iPad.css
@@ -14,8 +14,7 @@ a img{
 }
 .topimg{
   height:250px;
-  width:500px;
-  margin:0 0 10px;
+  width:100%;
 }
 h1{
    font-size:50px;
